5.3 2021-12-06
~~~~~~~~~~~~~~

* Added verify-hash-download option to muninn-pull.

* Use Bi/Ki/Gi/... as unit for human readable sizes instead of K/G/...

* When using the S3/Swift backend, a post ingest/pull hook will now use a
  locally kept temporary version of the product (instead of retrieving it
  again from the bucket). The path(s) to the ingested/pulled product files
  is passed on using a new 'paths' argument. Old hook functions without this
  argument will still work, but will not be able to access the files.

* muninn-pull for http(s) now retrieves data in blocks instead of reading the
  whole file in memory.

* Fixed issue when trying to ingest empty files or directories into S3/Swift
  storage.

* Fix compatibility issue with pg8000 >= 1.22.

5.2.1 2021-06-25
~~~~~~~~~~~~~~~~

* Fixed issue where a force ingest on a catalogue-only archive would fail.

5.2 2021-06-22
~~~~~~~~~~~~~~

* Added generic hooking mechanism (not coupled to a product type).

* Added 'muninn-update retype' to allow correction of product_type values.

* Added 'day', 'hour', 'minute', 'second', and 'time' subscripts for
  grouping by timestamps in muninn-summary.

* UUID values can now be used everywhere as boolean in query expressions.

* Add support for new type conversions of pg8000 >= 1.16.

* Allow filename in http result header for muninn-pull to be unquoted.

5.1 2021-01-31
~~~~~~~~~~~~~~

* Added support for oauth2 (Resource Owner Password Credentials Grant) for
  muninn-pull and added oauth2 support to the auth_file credentials file.

* url prefixes can now be used as keys in the auth_file credentials file
  (instead of only hostnames).

* muninn-pull will now auto-unzip a downloaded file if the downloaded filename
  equals core.physical_name + '.zip' (or '.ZIP').

* Improved memory efficiency of muninn-pull. Files are no longer read fully
  in memory when downloading.

* Added new plugin attribute 'hash_type', to specify hash algorithm