@@ -1,3 +1,5 @@
+* Allow explicit setting of region for S3 backend.
+
 5.3 2021-12-06
 ~~~~~~~~~~~~~~
 
